Aumento de cobertura de codigo sonarqube